Added a asset reader